Fix layout problem for text fields and areas in IE.
git-svn-id: svn://svn.oblomov.com/Oblomov@3690 63c81c92-1a08-11de-87e6-23293a004a03

--- a/scr/css/WebViews.css
+++ b/scr/css/WebViews.css
@@ -28,6 +28,12 @@ table.Xprez.Row td {
   white-space: nowrap;
 }
 
+/* disable padding and margin for textarea and text field because of IE bug */
+textarea,input[type="text"] {
+  padding: 0;
+  margin: 0;  
+}
+
 .roundedCorners {
   border:solid; 
   border-width:1px;
